<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StartGameActivity!</string>
    <string name="app_name">Gradiuss</string>
    <!-- StartGame -->
    <string name="start_game">Start Game</string>
    <string name="options">Options</string>
    <string name="highscore">Highscore</string>
    <string name="quit_game">Quit Game</string>
    
    <!-- GameOver -->
    <string name="restart">Restart</string>
    <string name="main">Main Menu</string>
    <string name="gameover">Game Over</string>
    
  	<!-- Highscore -->
  	<string name="high_scores">Save score</string>
    <string name="user">Player</string>
    <string name="about">About</string>
    <string name="help">Help</string>


</resources>