<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/startbildny2">

    <TextView
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="100dp"
        android:text=" " />
    
    <Button
        android:id="@+id/bStartGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#705090"
        android:text="@string/start_game"       
        android:onClick="StartGameMethod"
        android:textSize="30dp"
        android:typeface="monospace"
        android:background="@null" />

    <Button
        android:id="@+id/bHighScore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#705090"
        android:text="@string/highscore"
        android:onClick="HighscoreMethod"
        android:textSize="30dp"
        android:typeface="monospace"
        android:background="@null" />

        <Button
        android:id="@+id/bOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#705090"
        android:text="@string/options"
        android:onClick="OptionsMethod"
        android:textSize="30dp"
        android:typeface="monospace"
        android:background="@null" />
        
            <Button
        android:id="@+id/bAbout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#705090"
        android:text="@string/about"
        android:onClick="AboutMethod"
        android:textSize="30dp"
        android:typeface="monospace"
        android:background="@null" />
            
            <Button
        android:id="@+id/bHelp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#705090"
        android:text="@string/help"
        android:onClick="HelpMethod"
        android:textSize="30dp"
        android:typeface="monospace"
        android:background="@null" />
            
</LinearLayout>